fixed screen not to movee on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 .App {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   margin: 0 auto;
   max-width: 1040px;
   padding: 10px;
